--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,8 +20,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="%PUBLIC_URL%/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/vendor/devicons/css/devicons.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="%PUBLIC_URL%/assets/css/resume.min.css" rel="stylesheet">
+
   </head>
-  <body>
+  <body id="page-top">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -36,5 +49,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script src="%PUBLIC_URL%/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/resume.min.js"></script>
   </body>
 </html>
